# todo

./: README.md  manage.py  pyproject.toml
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_remove_todo_tags_delete_tag.py
static/css/: style.css
template/: base.html
template/todo/: todo_create.html  todo_delete.html  todo_detail.html  todo_list.html  todo_update.html
todo/: settings.py  urls.py
